Fixed a problem where styling was making the buttons not aligned

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,6 @@
   text-align: center; 
   background-color: var(--background-color);
   background-size: 100% 100%;
-  min-height: 100vh;
-  min-width: 100vw; 
 }
 
 body {
